fixed: link title alignment in dndview

--- a/assets/scss/components/_link.scss
+++ b/assets/scss/components/_link.scss
@@ -42,6 +42,7 @@
 				border: none;
 				width: auto;
 				overflow: visible;
+				text-align: left;
 
 				background: transparent;
 				font: inherit;
